--- a/style/style.css
+++ b/style/style.css
@@ -73,7 +73,7 @@ div.slide div.content {
 
 div.slide div.content {
   height: 100%;
-  padding: 10vh 0vh;
+  padding: 12vh 0vh;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
@@ -81,13 +81,29 @@ div.slide div.content {
   display: flex;
 }
 
+div.slide div.content div.text-wrapper {
+  width: 100%;
+  height: 100%;
+  border-bottom: 0.05em #b3b3b3 dashed;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  justify-content: center;
+}
+
+div.slide div.content div.text-wrapper:last-child {
+  border: none;
+}
+
 div.slide div.content div.text {
+  font-size: 90%;
   text-align: justify;
   line-height: 1.5;
 }
 
-div.slide div.content div.text.sh:nth-child(1) span.sans {
+div.slide div.content div.text-wrapper:nth-child(1) span.sans {
   font-family: "Vekos" !important;
+  font-size: 100% !important;
 }
 
 html {
