--- a/style/style.css
+++ b/style/style.css
@@ -75,12 +75,12 @@ div.slide div.content {
 div.slide div.content {
   height: 100%;
   padding: 12vh 0vh;
+  flex-grow: 1;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: stretch;
   box-sizing: border-box;
   display: flex;
-  flex-grow: 1;
 }
 
 div.slide div.content div.text-wrapper {
@@ -106,6 +106,68 @@ div.slide div.content div.text {
 div.slide div.content div.text-wrapper:nth-child(1) span.sans {
   font-family: "Vekos" !important;
   font-size: 100% !important;
+}
+
+div.title-slide {
+  width: 177.7777777778vh;
+  height: 100vh;
+  margin: 0px auto;
+  padding: 0px;
+  background-color: white;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+div.title-slide div.logo {
+  margin: 0rem 2.5rem 0rem 3rem;
+}
+
+div.title-slide div.logo img {
+  height: 8rem;
+}
+
+div.title-slide div.content {
+  height: 100%;
+  padding: 12vh 0vh;
+  flex-grow: 1;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: stretch;
+  box-sizing: border-box;
+  display: flex;
+  padding: 0vh;
+  font-family: "Gill Sans Nova";
+  font-weight: bold;
+  font-stretch: condensed;
+  color: white;
+  letter-spacing: 0.1em;
+  text-align: center;
+  justify-content: center;
+}
+
+div.title-slide div.content div.title {
+  padding: 0.5rem 0rem;
+  font-size: 220%;
+  background-color: #33aaff;
+  border-bottom: 0.2rem white solid;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+div.title-slide div.content div.subtitle {
+  padding: 0.5rem 0rem;
+  font-size: 160%;
+  background-color: #ffaa33;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 html {
